# pylotto

./: .gitignore  LICENSE  pyproject.toml
data/: lotto_results.yaml
docs/: electron-build-commands.md  electron-build-dependencies.md  predictive-score-grid-spec.md  structural-entropy-report.md
scripts/: combinations_1_to_49_to_sqlite.py  export_bayesian_markov_score_json.py  export_lotto_results_json.py  export_predictive_score_grid_json.py  generate_app_icon.py  generate_freshness_calculation_pdf.py  generate_proximity_bayesian_pdfs.py  yaml_to_sqlite.py
src/pylotto/: __main__.py  combinations_settings.yaml  draw.py  draw_history.py  lotto_number.py  lotto_results.yaml
src/pylotto/backend/: __init__.py
src/pylotto/viewers/: combinations_table_dialog.py  draw_history_difference_viewer.py  draw_history_gap_viewer.py  draw_history_viewer.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/electron/: copy-portable-data.cjs  main.cjs  preload.cjs
web/src/: App.vue  styles.css  types.ts  vite-env.d.ts
web/src/components/: AllDrawsDialog.vue  AutocorrelationReportDialog.vue  BayesianMarkovReportDialog.vue  ChiSquareReportDialog.vue  CoOccurrenceReportDialog.vue  DrawScoresDialog.vue  DrawsDialog.vue  EntropyReportDialog.vue  FreshnessReportDialog.vue  LastSeenDifferenceHighlightDialog.vue  LastSeenGapHighlightDialog.vue  LastSeenHighlightDialog.vue  MarkovScoreReportDialog.vue  MixedPredictionReportDialog.vue  NextPossibleDrawDialog.vue  ProximityReportDialog.vue  ScoreGraphsDialog.vue  SettingsDialog.vue  StatisticsReferenceNavigation.vue  (+1 more)
(+32 files in other folders)
