[project]
name = "pylotto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "pyside6>=6.10.2",
    "pyyaml>=6.0.3",
]

[tool.uv.workspace]
members = [
    "src/pylotto_mrk",
]
